<resources>
    <string name="app_name">Karaoke Moon</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Trang Chủ</string>
    <string name="title_people">Mọi người</string>
    <string name="title_mykaraoke">My Karaoke</string>
    <string name="title_upnhac">Up Nhạc</string>
    <string name="title_profile">Tôi</string>
    <string name="text_listview_casi">Ca sĩ: </string>
    <string name="text_listview_tencasi">Tên ca sĩ</string>
    <string name="text_listview_tenbaihat">Tên bài hát</string>
    <string name="text_listview_taive">Tải về</string>
    <string name="text_listview_hat">Hát</string>


    <!--    chỉnh textsize của bottom navagation-->
    <style name="BottomNavigationView" parent="@style/TextAppearance.AppCompat.Caption">
        <item name="android:textSize">11sp</item>
        <item name="android:fontFamily">@font/roboto_regular</item>
    </style>

    <style name="BottomNavigationView.Active" parent="@style/TextAppearance.AppCompat.Caption">
        <item name="android:textSize">12sp</item>
        <item name="android:fontFamily">@font/roboto_regular</item>
    </style>
    <!--    end-->

    <!--    login facebook-->
    <string name="facebook_app_id">240111108076027</string>
    <string name="fb_login_protocol_scheme">1111fb24008076027</string>


    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
        <!-- Customize your theme here. -->
        <item name="colorPrimary">@color/teal_700</item>
        <item name="colorPrimaryDark">@color/design_default_color_primary_dark</item>
        <item name="colorAccent">#F147CB</item>
    </style>
    //quay lại(back) màn hình trước bằng cách trượt sang trái
    <style name="AppTheme.SlidrActivityTheme">
        <item name="android:windowIsTranslucent">true</item>
        <item name="android:windowBackground">@android:color/transparent</item>
    </style>



</resources>