<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:foregroundGravity="bottom"
        android:gravity="fill_horizontal|center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.elyeproj.loaderviewlibrary.LoaderImageView
            android:id="@+id/imgBHKaraoke"
            android:layout_width="60dp"
            android:layout_height="60dp"
            tools:srcCompat="@drawable/image_default_bh" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp">

            <com.elyeproj.loaderviewlibrary.LoaderTextView
                android:id="@+id/txtTenBaiHat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:singleLine="true"
                android:text="@string/text_listview_tenbaihat"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <com.elyeproj.loaderviewlibrary.LoaderTextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="@font/roboto_regular"
                    android:paddingRight="5dp"
                    android:text="@string/text_listview_casi"
                    android:textSize="16sp" />

                <com.elyeproj.loaderviewlibrary.LoaderTextView
                    android:id="@+id/txtTenCaSi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/text_listview_tencasi"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <include
                android:id="@+id/loading_taive_anim"
                layout="@layout/loading_button_taive"
                android:layout_width="55dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:background="@drawable/button_listview_taive"
                android:fontFamily="@font/roboto_bold"
                android:padding="2dp"
                android:singleLine="true"
                android:text="@string/text_listview_taive"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:visibility="gone" />

            <android.widget.Button
                android:id="@+id/btnTaiVe"
                android:layout_width="55dp"
                android:layout_height="22dp"
                android:background="@drawable/button_listview_taive"
                android:fontFamily="@font/roboto_bold"
                android:padding="2dp"
                android:singleLine="true"
                android:text="@string/text_listview_taive"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>